po: update po/ca_ES/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ca_ES/admin.po
+++ b/po/ca_ES/admin.po
@@ -3,6 +3,7 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Andreu Lligadas <a.lligadas@gmail.com>, 2016
 # Calbasi <joan@calbasi.net>, 2013
 # Estefanía Mediavilla <e.mediavilla@ixiam.com>, 2014
 # francescbassas <francesc@babu.cat>, 2013-2016
@@ -14,8 +15,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-02 18:53+0000\n"
-"Last-Translator: francescbassas <francesc@babu.cat>\n"
+"PO-Revision-Date: 2016-03-30 15:20+0000\n"
+"Last-Translator: Andreu Lligadas <a.lligadas@gmail.com>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -35,7 +36,7 @@ msgstr "Aquest nom de tipus de contacte ja existeix a la base de dades. Els noms
 
 #: CRM/Admin/Form/ContactType.php
 msgid "Contact type names should not use reserved keywords."
-msgstr ""
+msgstr "Els noms del tipus de contacte no han de fer servir caràcters reservats."
 
 #: CRM/Admin/Form/ContactType.php
 msgid "Selected contact type has been deleted."
@@ -57,7 +58,7 @@ msgstr "L'administrador del sistema ha desactivat aquesta característica."
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Unsupported action"
-msgstr ""
+msgstr "Acció no suportada"
 
 #: CRM/Admin/Form/Extensions.php CRM/Admin/Page/Extensions.php
 msgid "Install"
@@ -99,7 +100,7 @@ msgstr "S'ha desinstal·lat l'extensió"
 msgid ""
 "Cannot uninstall this extension - there is at least one payment processor "
 "using the payment processor type provided by it."
-msgstr ""
+msgstr "No es pot desinstal·lar aquesta extensió - hi ha algun processador de pagament fent servir aquest tipus de procés de pagament proveït per la mateixa."
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Uninstall Error"
@@ -111,7 +112,7 @@ msgstr "S'ha instal·lat l'extensió"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Extension Enabled"
-msgstr ""
+msgstr "Extensió habilitada"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Extension Disabled"
@@ -119,11 +120,11 @@ msgstr "S'ha desactiva l'extensió"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Extension Upgraded"
-msgstr ""
+msgstr "Extensió actualitzada"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Extension Upgrade Failed"
-msgstr ""
+msgstr "Error en l'actualització de l'extensió"
 
 #: CRM/Admin/Form/Job.php
 msgid "Manage - Scheduled Jobs"
@@ -131,7 +132,7 @@ msgstr "Gestió - Tasques programades"
 
 #: CRM/Admin/Form/Job.php
 msgid "API Call Entity"
-msgstr ""
+msgstr "Entitat de trucada de l'API"
 
 #: CRM/Admin/Form/Job.php
 msgid "API Call Action"
