po: update po/nl_NL/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/common-base.po
+++ b/po/nl_NL/common-base.po
@@ -22,7 +22,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-03-24 19:06+0000\n"
+"PO-Revision-Date: 2016-03-31 16:27+0000\n"
 "Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -3570,7 +3570,7 @@ msgstr "Alle kenmerken"
 
 #: CRM/Contact/Form/Search/Criteria.php CRM/Core/SelectValues.php
 msgid "Search Views"
-msgstr "Weergave"
+msgstr "Zoekresultaten"
 
 #: CRM/Contact/Form/Search/Criteria.php
 msgid "- default view -"
@@ -7303,7 +7303,7 @@ msgstr "Afkorting staat/provincie"
 #: templates/CRM/Price/Page/Set.tpl templates/CRM/UF/Form/Group.hlp
 #: templates/CRM/UF/Page/Group.tpl
 msgid "Used For"
-msgstr "Ten bate van"
+msgstr "Gebruikt voor"
 
 #: CRM/Core/DAO/Tag.php
 msgid "Tag Created Date"
@@ -24918,7 +24918,7 @@ msgstr "EXCLUSIEF Ontvangers van dit/deze bericht(en)"
 
 #: CRM/UF/Form/Field.php
 msgid "Profile Field"
-msgstr "Profiel Veld"
+msgstr "Profielveld"
 
 #: CRM/UF/Form/Field.php
 msgid "You have already added a primary location field of this type: %1"
