--- a/po/es_MX/extension.po
+++ b/po/es_MX/extension.po
@@ -4,12 +4,13 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Diego Sansone, 2015
+# Juana Martinez <juanams2000@hotmail.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-04-01 22:22+0000\n"
+"Last-Translator: Juana Martinez <juanams2000@hotmail.com>\n"
 "Language-Team: Spanish (Mexico) (http://www.transifex.com/civicrm/civicrm/language/es_MX/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -38,11 +39,11 @@ msgid ""
 "please check your webserver can make external HTTP requests or contact "
 "CiviCRM team on <a href=\"http://forum.civicrm.org/\">CiviCRM forum</a>.<br "
 "/>"
-msgstr ""
+msgstr "El directorio de extensiones publicas de CiviCRM al 1% no pudo ser contactado- por favor chequee si su servidor de web puede lograr pedidos de HTTP o contactar al equipo de CiviCRM en <a href=\"http://forum.civicrm.org/\">CiviCRM forum</a>.<br />"
 
 #: CRM/Extension/Browser.php
 msgid "Connection Error"
-msgstr ""
+msgstr "Error de conexion"
 
 #: CRM/Extension/Browser.php
 msgid ""
@@ -51,27 +52,27 @@ msgid ""
 "from here</a>). If you want to install an extension which is not marked as "
 "compatible, you may be able to <a href=\"%3\">download and install "
 "extensions manually</a> (depending on access to your web server).<br />"
-msgstr ""
+msgstr "No hay actualmente extensiones en el directorio de extensiones publicas de CiviCRM que sean compatibles con la version %2 (<a href=\"%1\">extensiones solicitadas desde aqui</a>). Si usted quiere instalar una extension que no sea compatible aun, puedes <a href=\"%3\"> descargar e instalar extensiones manualmente</a>(dependiendo de su acceso al servidor de internet).<br />"
 
 #: CRM/Extension/Browser.php
 msgid "No Extensions Available for this Version"
-msgstr ""
+msgstr "No hay extensiones disponibles para esta version"
 
 #: CRM/Extension/Container/Basic.php CRM/Extension/Container/Default.php
 msgid "Invalid Base Directory"
-msgstr ""
+msgstr "Base de directorio invalida"
 
 #: CRM/Extension/Container/Basic.php
 msgid "An extension container has been defined with a blank directory."
-msgstr ""
+msgstr "Un contenedor de extensiones ha sido definido con un directorio en blanco"
 
 #: CRM/Extension/Container/Basic.php CRM/Extension/Container/Default.php
 msgid "Invalid Base URL"
-msgstr ""
+msgstr "Base de URL invalida"
 
 #: CRM/Extension/Container/Basic.php
 msgid "An extension container has been defined with a blank URL."
-msgstr ""
+msgstr "Un contenedor de extensiones ha sido definido con un URL en blanco"
 
 #: CRM/Extension/Container/Basic.php
 msgid ""
@@ -103,18 +104,18 @@ msgstr ""
 
 #: CRM/Extension/Downloader.php
 msgid "ZIP Support Required"
-msgstr ""
+msgstr "Soporte de ZIP requerido"
 
 #: CRM/Extension/Downloader.php
 msgid ""
 "You will not be able to install extensions at this time because your "
 "installation of PHP does not support ZIP archives. Please ask your system "
 "administrator to install the standard PHP-ZIP extension."
-msgstr ""
+msgstr "No podrá instalar extensiones en este momento porque su instalación de PHP no soporta archivos ZIP. Por favor, pregunte a su administrador de sistemas que instale la extension estándar PHP-ZIP"
 
 #: CRM/Extension/Downloader.php
 msgid "Unable to extract the extension: bad directory structure"
-msgstr ""
+msgstr "Imposible de extraer la extension: erronea estructura de directorio"
 
 #: CRM/Extension/Downloader.php
 msgid "Unable to extract the extension: %1 cannot be cleared"
@@ -122,15 +123,15 @@ msgstr ""
 
 #: CRM/Extension/Downloader.php
 msgid "Installation Error"
-msgstr ""
+msgstr "Error de instalacion"
 
 #: CRM/Extension/Downloader.php
 msgid "Unable to extract the extension to %1."
-msgstr ""
+msgstr "Incapaz de extraer la extension al 1%."
 
 #: CRM/Extension/Downloader.php
 msgid "Unable to extract the extension."
-msgstr ""
+msgstr "Incapaz de extraer la extensión"
 
 #: CRM/Extension/Downloader.php
 msgid "Failed reading data from %1 during installation"
@@ -154,7 +155,7 @@ msgstr ""
 msgid ""
 "A copy of the extension (%1) is in a system folder (%2). The system copy "
 "will be preserved, but the new copy will be used."
-msgstr ""
+msgstr "Una copia de la extension (1%) se encuentra en una carpeta del sistema (2%). La copia de sistema será preservada, pero una nueva copia será usada"
 
 #: CRM/Extension/Downloader.php
 msgid ""
