po: update po/sv_SE/contribute.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sv_SE/contribute.po
+++ b/po/sv_SE/contribute.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-03-21 14:29+0000\n"
+"PO-Revision-Date: 2016-04-01 09:18+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -38,7 +38,7 @@ msgstr "ID för återkommande inbetalning"
 
 #: CRM/Contribute/BAO/Contribution.php
 msgid "Cannot change contribution status from %1 to %2."
-msgstr ""
+msgstr "Kunde inte ändra inbetalningens status från %1 till %2."
 
 #: CRM/Contribute/BAO/ContributionPage.php
 msgid "Automatically Generated"
@@ -242,15 +242,15 @@ msgstr ""
 
 #: CRM/Contribute/BAO/Widget.php
 msgid "Raised %1 of %2"
-msgstr ""
+msgstr "Insamlat %1 av %2"
 
 #: CRM/Contribute/BAO/Widget.php
 msgid "Raised %1"
-msgstr ""
+msgstr "Insamlat"
 
 #: CRM/Contribute/BAO/Widget.php
 msgid "Donors"
-msgstr ""
+msgstr "Givare"
 
 #: CRM/Contribute/BAO/Widget.php
 msgid "Learn more."
@@ -282,7 +282,7 @@ msgstr ""
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Pay Later Receipt"
-msgstr ""
+msgstr "Kvitto för senare betalning"
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Min Initial Amount"
@@ -377,7 +377,7 @@ msgstr ""
 #: CRM/Contribute/DAO/ContributionRecur.php
 #: CRM/Contribute/Form/UpdateSubscription.php
 msgid "Number of Installments"
-msgstr ""
+msgstr "Antal inbetalningar"
 
 #: CRM/Contribute/DAO/ContributionRecur.php
 msgid "Recurring Contribution Started Date"
@@ -414,7 +414,7 @@ msgstr ""
 
 #: CRM/Contribute/DAO/ContributionRecur.php
 msgid "Send email Receipt?"
-msgstr ""
+msgstr "Skicka e-postkvitto?"
 
 #: CRM/Contribute/DAO/ContributionSoft.php
 msgid "Soft Contribution ID"
@@ -470,7 +470,7 @@ msgstr "Produktnamn"
 
 #: CRM/Contribute/DAO/Product.php
 msgid "Thumbnail"
-msgstr ""
+msgstr "Bildminiatyr"
 
 #: CRM/Contribute/DAO/Product.php
 msgid "Minimum Contribution"
@@ -536,15 +536,15 @@ msgstr ""
 
 #: CRM/Contribute/Form/AbstractEditPayment.php
 msgid "Membership for %1 has been Cancelled."
-msgstr ""
+msgstr "Medlemskapet för %1 har avbrutits."
 
 #: CRM/Contribute/Form/AbstractEditPayment.php
 msgid "Membership for %1 has been Expired."
-msgstr ""
+msgstr "Medlemskapet för %1 har gått ut."
 
 #: CRM/Contribute/Form/AbstractEditPayment.php
 msgid "Membership for %1 has been updated. The membership End Date is %2."
-msgstr ""
+msgstr "Medlemskapet för %1 har uppdaterats. Slutdatum är %2."
 
 #: CRM/Contribute/Form/AbstractEditPayment.php
 msgid "Event Registration for %1 has been Cancelled."
@@ -749,7 +749,7 @@ msgstr "delbetalningar"
 
 #: CRM/Contribute/Form/Contribution/Main.php
 msgid "Number of installments must be a whole number."
-msgstr ""
+msgstr "Antalet inbetalningar måste vara ett heltal."
 
 #: CRM/Contribute/Form/Contribution/Main.php
 msgid "Contribution amount must be at least %1"
@@ -790,7 +790,7 @@ msgstr ""
 
 #: CRM/Contribute/Form/Contribution/Main.php
 msgid "Please select at least one membership option."
-msgstr ""
+msgstr "Välj minst ett medlemskapsalternativ."
 
 #: CRM/Contribute/Form/Contribution/Main.php
 msgid ""
@@ -982,7 +982,7 @@ msgstr ""
 
 #: CRM/Contribute/Form/ContributionBase.php
 msgid "Membership Invalid"
-msgstr ""
+msgstr "Ogiltigt medlemskap"
 
 #: CRM/Contribute/Form/ContributionBase.php
 msgid ""
