po: update po/sv_SE/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sv_SE/admin.po
+++ b/po/sv_SE/admin.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-03-21 14:58+0000\n"
+"PO-Revision-Date: 2016-04-01 11:11+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -3120,7 +3120,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Form/Setting/Date.hlp
 msgid "abbreviated month name ('Jan'..'Dec')"
-msgstr ""
+msgstr "förkortat datumnamn ('jan'...'dec')"
 
 #: templates/CRM/Admin/Form/Setting/Date.hlp
 msgid "full month name ('January'..'December')"
@@ -3128,56 +3128,56 @@ msgstr "månadens hela namn ('januari'..'december')"
 
 #: templates/CRM/Admin/Form/Setting/Date.hlp
 msgid "day of the month as a decimal number, 0-padded ('01'..'31')"
-msgstr ""
+msgstr "dag i månaden som ett heltal, 0-utfyllt ('01'...'31')"
 
 #: templates/CRM/Admin/Form/Setting/Date.hlp
 msgid "day of the month as a decimal number, blank-padded (' 1'..'31')"
-msgstr ""
+msgstr "dag i månaden som heltal, blank-utfyllt (' 1'...'31')"
 
 #: templates/CRM/Admin/Form/Setting/Date.hlp
 msgid "day of the month as a decimal number ('1'..'31')"
-msgstr ""
+msgstr "dag i månaden som ett heltal, utan utfyllnad ('1'...'31')"
 
 #: templates/CRM/Admin/Form/Setting/Date.hlp
 msgid ""
 "English ordinal suffix for the day of the month ('st', 'nd', 'rd', 'th')"
-msgstr ""
+msgstr "Svensk ordningssuffix för dag i månaden (':a', ':a', ':e', ':e')"
 
 #: templates/CRM/Admin/Form/Setting/Date.hlp
 msgid "hour in 24-hour format, 0-padded ('00'..'23')"
-msgstr ""
+msgstr "timme på 24-timmarsformat, 0-utfyllt ('00'...'23')"
 
 #: templates/CRM/Admin/Form/Setting/Date.hlp
 msgid "hour in 12-hour format, 0-padded ('01'..'12')"
-msgstr ""
+msgstr "timme på 12-timmarsformat, 0-utfyllt ('01'...'12')"
 
 #: templates/CRM/Admin/Form/Setting/Date.hlp
 msgid "hour in 24-hour format, blank-padded (' 0'..'23')"
-msgstr ""
+msgstr "timme på 24-timmarsformat, blankutfyllt (' 0'...'23')"
 
 #: templates/CRM/Admin/Form/Setting/Date.hlp
 msgid "hour in 12-hour format, blank-padded (' 1'..'12')"
-msgstr ""
+msgstr "timme på 12-timmarsformat, blankutfyllt (' 1'...'12')"
 
 #: templates/CRM/Admin/Form/Setting/Date.hlp
 msgid "month as a decimal number, 0-padded ('01'..'12')"
-msgstr ""
+msgstr "månad som heltal, 0-utfyllt ('01'...'12')"
 
 #: templates/CRM/Admin/Form/Setting/Date.hlp
 msgid "minute, 0-padded ('00'..'60')"
-msgstr ""
+msgstr "minut, 0-utfyllt ('00'...'59')"
 
 #: templates/CRM/Admin/Form/Setting/Date.hlp
 msgid "lowercase ante/post meridiem ('am', 'pm')"
-msgstr ""
+msgstr "gemener för förmiddag/eftermiddag ('fm', 'em')"
 
 #: templates/CRM/Admin/Form/Setting/Date.hlp
 msgid "uppercase ante/post meridiem ('AM', 'PM')"
-msgstr ""
+msgstr "versaler för förmiddag/eftermiddag ('FM', 'EM')"
 
 #: templates/CRM/Admin/Form/Setting/Date.hlp
 msgid "year as a decimal number including the century ('2015')"
-msgstr ""
+msgstr "år som heltal inklusive århundrade (t.ex. '2015')"
 
 #: templates/CRM/Admin/Form/Setting/Date.tpl
 msgid ""
