po: update po/sv_SE/install.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sv_SE/install.po
+++ b/po/sv_SE/install.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:24-0500\n"
-"PO-Revision-Date: 2016-03-21 14:46+0000\n"
+"PO-Revision-Date: 2016-04-01 11:01+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -280,13 +280,13 @@ msgstr "Följande problem gjorde det omöjligt att installera CiviCRM:"
 msgid ""
 "You need PHP version %1 or later, only %2 is installed. Please upgrade your "
 "server, or ask your web-host to do so."
-msgstr ""
+msgstr "Du behöver PHP version %1 eller senare, du har %2 installerad. Uppgradera din server eller kontakta din tjänsteleverantör och be dom göra det."
 
 #: install/index.php
 msgid ""
 "PHP version %1 is not supported. PHP version earlier than %2 is required. "
 "You might want to downgrade your server, or ask your web-host to do so."
-msgstr ""
+msgstr "PHP version %1 stöds inte. Bara PHP-versioner före %2 kan användas. Du måste ned-gradera PHP på din sever eller be din tjänsteleverantör att göra det."
 
 #: install/index.php
 msgid "file '%1' not found"
@@ -294,7 +294,7 @@ msgstr "fil '%1' kunde inte hittas"
 
 #: install/index.php
 msgid "file '%1' found"
-msgstr ""
+msgstr "filen '%1' finns inte"
 
 #: install/index.php
 msgid ""
@@ -306,31 +306,31 @@ msgstr ""
 msgid ""
 "Cannot determine the version of MySQL installed. Please ensure at least "
 "version %1 is installed."
-msgstr ""
+msgstr "Kunde inte lista ut versionen på MySQL. Säkra att version %1 eller senare är installerad."
 
 #: install/index.php
 msgid "Could not determine if MySQL has InnoDB support. Assuming no."
-msgstr ""
+msgstr "Kunde inte lista ut om din version av MySQL har InnoDB stöd. Antar det."
 
 #: install/index.php
 msgid "MySQL server does have InnoDB support"
-msgstr ""
+msgstr "Din MySQL-server har inte stöd för InnoDB, vilket krävs."
 
 #: install/index.php
 msgid "Could not determine if MySQL has InnoDB support. Assuming no"
-msgstr ""
+msgstr "Kunde inte lista ut om din MySQL har stöd för InnoDB. Antar inte."
 
 #: install/index.php
 msgid "Could not login to the database."
-msgstr ""
+msgstr "Kunde inte logga in till databasen."
 
 #: install/index.php
 msgid "Could not select the database."
-msgstr ""
+msgstr "Kunde inte välja databasen."
 
 #: install/index.php
 msgid "Could not create a temp table."
-msgstr ""
+msgstr "Kunde inte skapa temporärtabell."
 
 #: install/index.php
 msgid "Could not create a table in the database."
@@ -338,7 +338,7 @@ msgstr "Kunde inte skapa en tabell i databasen."
 
 #: install/index.php
 msgid "Could not create a database trigger."
-msgstr ""
+msgstr "Kunde inte skapa databas-trigger."
 
 #: install/index.php
 msgid "Could not connect to the database server."
@@ -346,11 +346,11 @@ msgstr "Kunde inte kontakta databasservern."
 
 #: install/index.php
 msgid "Could not obtain a write lock for the database table."
-msgstr ""
+msgstr "Kunde inte låsa databastabell för skrivning."
 
 #: install/index.php
 msgid "Could not release the lock for the database table."
-msgstr ""
+msgstr "Kunde inte låsa upp databastabell för skrivning."
 
 #: install/index.php
 msgid "Could not query database server variables."
@@ -370,11 +370,11 @@ msgstr ""
 
 #: install/index.php
 msgid "The database: '%1' does not exist."
-msgstr ""
+msgstr "Databasen: '%1' finns inte."
 
 #: install/index.php
 msgid "Able to create a new database."
-msgstr ""
+msgstr "Kunde skapa ny databas."
 
 #: install/index.php
 msgid "user '%1' doesn't have CREATE DATABASE permissions."
@@ -416,7 +416,7 @@ msgstr ""
 
 #: install/index.php
 msgid "CiviCRM has been successfully installed"
-msgstr ""
+msgstr "Installationen av CiviCRM har lyckats"
 
 #: install/index.php
 msgid ""
@@ -450,7 +450,7 @@ msgstr "CiviCRM-installeraren"
 
 #: install/template.html
 msgid "Version %1"
-msgstr ""
+msgstr "Version %1"
 
 #: install/template.html
 msgid ""
@@ -473,23 +473,23 @@ msgstr ""
 
 #: install/template.html
 msgid "You're ready to install!"
-msgstr ""
+msgstr "Klart att installera!"
 
 #: install/template.html
 msgid "Check Requirements and Install CiviCRM"
-msgstr ""
+msgstr "Kontrollera förutsättningarna och installera CiviCRM"
 
 #: install/template.html
 msgid "Installing CiviCRM..."
-msgstr ""
+msgstr "Installerar CiviCRM..."
 
 #: install/template.html
 msgid "(this will take a few minutes)"
-msgstr ""
+msgstr "(detta kommer att ta några minuter)"
 
 #: install/template.html
 msgid "Language and Region Settings"
-msgstr ""
+msgstr "Språk och regionsinställningar"
 
 #: install/template.html
 msgid ""
@@ -498,15 +498,15 @@ msgid ""
 "in that language. The initial configuration of the basic data will also be "
 "set to that language (ex: individual prefixes, suffixes, activity types, "
 "etc.). <a href=\"%1\">Learn more about using CiviCRM in other languages.</a>"
-msgstr ""
+msgstr "CiviCRM har översatts till många språk tack vare stora insatser av frivilliga översättare. Genom att välja ett annat språk är det möjligt att installationen kan göras med detta språk. Den initiala konfiguration av basdata kommer då också att göras för detta språk (det inkluderar till exempel titlar, namnprefix, åtgärdsnamn mm.) <a href=\"%1\">Läs mer om att använda CiviCRM på andra språk</a>."
 
 #: install/template.html
 msgid "Language of basic data:"
-msgstr ""
+msgstr "Språk för basdata:"
 
 #: install/template.html
 msgid "Change language"
-msgstr ""
+msgstr "Ändra språk"
 
 #: install/template.html
 msgid "Database Version and Connection Settings"
@@ -530,48 +530,48 @@ msgstr ""
 msgid ""
 "Database version and connection settings have been verified and look "
 "correct!"
-msgstr ""
+msgstr "Databasversion och uppkopplingsinställningar har kontrollerats och verkar korrekta."
 
 #: install/template.html
 msgid "CiviCRM Database Settings"
-msgstr ""
+msgstr "CiviCRM databasinställningar"
 
 #: install/template.html
 msgid "MySQL server:"
-msgstr ""
+msgstr "MySQL-server:"
 
 #: install/template.html
 msgid "MySQL username:"
-msgstr ""
+msgstr "MySQL användarnamn:"
 
 #: install/template.html
 msgid "MySQL password:"
-msgstr ""
+msgstr "MySQL lösenord:"
 
 #: install/template.html
 msgid "MySQL database:"
-msgstr ""
+msgstr "MySQL-databas:"
 
 #: install/template.html
 msgid "Drupal Database Settings"
-msgstr ""
+msgstr "Drupal databasinställningar:"
 
 #: install/template.html
 msgid "Other Settings"
-msgstr ""
+msgstr "Andra inställningar"
 
 #: install/template.html
 msgid "Re-check requirements"
-msgstr ""
+msgstr "Kontrollera förutsättningarna igen"
 
 #: install/template.html
 msgid "CiviCRM Database Details"
-msgstr ""
+msgstr "CiviCRM databasdetaljer"
 
 #: install/template.html
 msgid "Drupal Database Details"
-msgstr ""
+msgstr "Drupal databasdetaljer"
 
 #: install/template.html
 msgid "Requirements"
-msgstr ""
+msgstr "Förutsättningar"
