po: update po/sv_SE/event.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sv_SE/event.po
+++ b/po/sv_SE/event.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-03-21 14:06+0000\n"
+"PO-Revision-Date: 2016-04-04 08:39+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -3779,7 +3779,7 @@ msgstr ""
 msgid ""
 "Unfortunately some of your options have now sold out for one or more "
 "participants."
-msgstr ""
+msgstr "Tyvärr har några av de alternativ du valt sålt slut för en eller flera deltagare."
 
 #: CRM/Event/Form/Registration/Confirm.php
 msgid ""
