po: update po/sv_SE/menu.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sv_SE/menu.po
+++ b/po/sv_SE/menu.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-19 13:31+0000\n"
+"PO-Revision-Date: 2016-04-04 08:23+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -2040,7 +2040,7 @@ msgctxt "menu"
 msgid ""
 "Provides reporting on Intended and Successful Deliveries, Unsubscribes and "
 "Opt-outs, Replies and Forwards."
-msgstr "Visa en rapport över avsedda och lyckade leveranser, prenumerationsuppsägningar och utskicksstopp, svar och vidaresändningar."
+msgstr "Visa en rapport över avsedda och lyckade leveranser, prenumerations- och utskicksuppsägningar, svar och vidaresändningar."
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2143,7 +2143,7 @@ msgstr "Repetera arrangemang"
 
 msgctxt "menu"
 msgid "Opt-out"
-msgstr "Hoppa av"
+msgstr "Avsägning"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
