po: update po/sv_SE/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sv_SE/common-base.po
+++ b/po/sv_SE/common-base.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-03-21 14:29+0000\n"
+"PO-Revision-Date: 2016-04-04 08:43+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -8593,7 +8593,7 @@ msgstr "Auto-svar"
 
 #: CRM/Core/SelectValues.php xml/templates/civicrm_data.tpl
 msgid "Opt-out Message"
-msgstr "Utgående meddelande"
+msgstr "Avsägningsmeddelande"
 
 #: CRM/Core/SelectValues.php xml/templates/civicrm_data.tpl
 msgid "Subscription Confirmation Request"
@@ -11674,7 +11674,7 @@ msgid ""
 "'Unsubscribe via web page' - creates a link for recipients to unsubscribe "
 "from the specific mailing list used to send this message. Alternatively, you"
 " can include the 'Unsubscribe via email' token or one of the Opt-out tokens."
-msgstr ""
+msgstr "'Avbryta prenumeration via web-sida' - skapar en länk för mottagare av utskick att avsäga sig utskick för den lista som användes för att skicka meddelandet. Alternativt kan du inkludera 'Avbryta prenumeration via e-post'-elementet eller något av avsägnings-elementen."
 
 #: CRM/Utils/VersionCheck.php
 msgid "Unable to write file"
@@ -12852,7 +12852,7 @@ msgstr "Om du använder CiviMail för att skicka utskick till kontakter så ger 
 
 #: templates/CRM/Contact/Form/Contact.hlp
 msgid "Opt Out"
-msgstr ""
+msgstr "Avsägning"
 
 #: templates/CRM/Contact/Form/Contact.hlp
 msgid ""
@@ -19050,7 +19050,7 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "Opt-out Confirmation"
-msgstr ""
+msgstr "Bekräfta avsägning"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Your email address has been removed from %1 mailing lists."
