po: update po/sv_SE/mailing.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sv_SE/mailing.po
+++ b/po/sv_SE/mailing.po
@@ -14,7 +14,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-03-21 12:38+0000\n"
+"PO-Revision-Date: 2016-04-04 08:47+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -37,7 +37,7 @@ msgstr "CiviMail skickar inte tom epost. Hoppar över: %1"
 
 #: CRM/Mailing/BAO/Mailing.php CRM/Mailing/Selector/Event.php
 msgid "Opt-Out"
-msgstr "Avsluta prenumeration"
+msgstr "Avsägning"
 
 #: CRM/Mailing/BAO/Mailing.php
 msgid "You do not have permission to access this mailing report"
@@ -1501,7 +1501,7 @@ msgstr ""
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Mailing Opt Out"
-msgstr ""
+msgstr "Avsägning av utskick"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Mailing From Name"
@@ -1661,25 +1661,25 @@ msgstr ""
 
 #: CRM/Mailing/Form/Optout.php
 msgid "Please Confirm Your Opt Out"
-msgstr ""
+msgstr "Bekräfta din avsägning av utskick"
 
 #: CRM/Mailing/Form/Optout.php
 msgid "Verify email address to opt out:"
-msgstr ""
+msgstr "Kontrollera e-postadressen att avsäga:"
 
 #: CRM/Mailing/Form/Optout.php
 msgid "Email address is required to opt out."
-msgstr ""
+msgstr "E-postadress krävs för att avsäga utskick."
 
 #: CRM/Mailing/Form/Optout.php
 msgid "Email: %1 has been successfully opted out"
-msgstr ""
+msgstr "E-postadressen %1 har tagits bort från utskick."
 
 #: CRM/Mailing/Form/Optout.php
 msgid ""
 "The email address: %1 you have entered does not match the email associated "
 "with this opt out request."
-msgstr ""
+msgstr "E-postadressen %1, som du angav, matchar inte e-postadressen för denna begäran om avsägning."
 
 #: CRM/Mailing/Form/Search.php
 msgid "Draft / Unscheduled"
@@ -1715,7 +1715,7 @@ msgstr ""
 #: templates/CRM/Mailing/Form/Optout.tpl
 msgid ""
 "You are requesting to opt out this email address from all mailing lists:"
-msgstr ""
+msgstr "Du håller på att avsäga denna e-postadress från alla utskickslistor:"
 
 #: templates/CRM/Mailing/Form/Optout.tpl
 msgid ""
@@ -1723,7 +1723,7 @@ msgid ""
 " <i><b>not</b></i> been added to any mailing lists. If this is your email "
 "address and you <i><b>wish to opt out</b></i> please enter your email "
 "address below for verification purposes:"
-msgstr ""
+msgstr "Om detta inte är din e-postadress behöver du inte göra något. I så fall har din e-postadress<i><b>inte</b></i> registrerats på någon utskickslista. Om det här <i>är</i> din e-postadress och du vill <i><b>avsäga dig utskick</b></i> anger du din fullständiga e-postadress nedan för att vi ska kunna verifiera den."
 
 #: templates/CRM/Mailing/Form/Unsubscribe.tpl
 msgid "You are requesting to unsubscribe this email address:"
