--- a/po/sv_SE/common-components.po
+++ b/po/sv_SE/common-components.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-03-21 12:39+0000\n"
+"PO-Revision-Date: 2016-04-04 08:27+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -2310,7 +2310,7 @@ msgid ""
 "re-usable <strong>message footer</strong>. Refer to the online documentation"
 " for details on how to include required links and contact information as "
 "well as sample messages."
-msgstr ""
+msgstr "Utskick med CiviMail måste innehålla en länk för att <strong>avsäga/avböja utskick</strong> (\"Avsäga via web-sida\") och <strong>postadressen</strong> för din organisation. Detta minskar risken att utskicken tolkas som SPAM. Elementen kan placeras i själva meddelandet ELLER i en återanvändbar <strong>meddelandefot</strong>. Läs mer i online-dokumentationen om hur man använder de länkar och kontaktinformation som krävs, och exempel på meddelande."
 
 #: templates/CRM/Contribute/Form/Task/Invoice.hlp
 #: templates/CRM/Mailing/Form/Upload.hlp
