po: update po/ca_ES/install.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ca_ES/install.po
+++ b/po/ca_ES/install.po
@@ -3,13 +3,14 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Andreu Lligadas <a.lligadas@gmail.com>, 2016
 # francescbassas <francesc@babu.cat>, 2014-2015
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:24-0500\n"
-"PO-Revision-Date: 2015-12-11 09:46+0000\n"
-"Last-Translator: francescbassas <francesc@babu.cat>\n"
+"PO-Revision-Date: 2016-04-06 11:07+0000\n"
+"Last-Translator: Andreu Lligadas <a.lligadas@gmail.com>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -19,13 +20,13 @@ msgstr ""
 
 #: install/index.php
 msgid "Oops! Please correct your install location"
-msgstr ""
+msgstr "Vaja! Si us plau corregiu la localització de la instal·lació"
 
 #: install/index.php
 msgid ""
 "Please untar (uncompress) your downloaded copy of CiviCRM in the "
 "<strong>%1</strong> directory below your Drupal root directory."
-msgstr ""
+msgstr "Si us plau descomprimiu la còpia de CiviCRM al directori <strong>%1</strong> sota el directori root de Drupal"
 
 #: install/index.php
 msgid "Oops! CiviCRM is already installed"
@@ -33,7 +34,7 @@ msgstr "Vaja! El CiviCRM ja està instal·lat"
 
 #: install/index.php
 msgid "[your Drupal root directory]"
-msgstr ""
+msgstr "[El directori root de Drupal]"
 
 #: install/index.php
 msgid "Installation Guide"
@@ -46,19 +47,19 @@ msgid ""
 "<strong>civicrm.settings.php</strong> - from <strong>%1</strong>.</li><li>To"
 " <strong>upgrade an existing installation</strong>, <a href='%2'>refer to "
 "the online documentation</a>.</li></ul>"
-msgstr ""
+msgstr "CiviCRM s'ha instal·lat. <ul><li>Per <strong>començar</strong>, has d'eliminar o reanomenar l'existent fitxer de configuració de CiviCRM - <strong>civicrm.settings.php</strong> - a <strong>%1</strong>.</li><li>Per <strong>actualitzar una actualització existent</strong>, <a href='%2'>visiteu la documentació d'internet</a>.</li></ul>"
 
 #: install/index.php
 msgid "Oops! Incorrect CiviCRM version"
-msgstr ""
+msgstr "Vaja! Versió incorrecta de CiviCRM"
 
 #: install/index.php
 msgid "This installer can only be used for the Drupal version of CiviCRM."
-msgstr ""
+msgstr "Aquest instal·lador només es pot fer servir sobre una versió Drupal de CiviCRM"
 
 #: install/index.php
 msgid "Oops! Incorrect Drupal version"
-msgstr ""
+msgstr "Vaja! Versió Drupal incorrecte"
 
 #: install/index.php
 msgid ""
@@ -68,7 +69,7 @@ msgstr ""
 
 #: install/index.php
 msgid "This installer can only be used for the WordPress version of CiviCRM."
-msgstr ""
+msgstr "Aquest instal·lador només es pot fer servir sobre una versió WordPress de CiviCRM"
 
 #: install/index.php
 msgid "PHP Configuration"
@@ -92,19 +93,19 @@ msgstr "El servidor existeix?"
 
 #: install/index.php
 msgid "Can't find the a MySQL server on '%1'."
-msgstr ""
+msgstr "No localitzem el servidor MySQL a '%1'."
 
 #: install/index.php
 msgid "Are the access credentials correct?"
-msgstr ""
+msgstr "Les credencials són correctes? "
 
 #: install/index.php
 msgid "That username/password doesn't work"
-msgstr ""
+msgstr "Aquests usuari/contrasenya no funciona"
 
 #: install/index.php
 msgid "MySQL version at least %1"
-msgstr ""
+msgstr "Versió MySQL mínima %1"
 
 #: install/index.php
 msgid "MySQL version %1 or higher is required, you are running MySQL %2."
@@ -112,7 +113,7 @@ msgstr ""
 
 #: install/index.php
 msgid "MySQL %1"
-msgstr ""
+msgstr "MySQL %1"
 
 #: install/index.php
 msgid "Is auto_increment_increment set to 1"
