--- a/po/el_GR/campaign.po
+++ b/po/el_GR/campaign.po
@@ -5,14 +5,15 @@
 # Translators:
 # kvisitor <kvisitor@gnugr.org>, 2013
 # kvisitor <kvisitor@gnugr.org>, 2013
+# Lena Vangeli <l.vangeli@ixiam.com>, 2016
 # Vangelis P. <v.pantazis@ixiam.com>, 2014
 # Vangelis P. <v.pantazis@ixiam.com>, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-04-06 11:43+0000\n"
+"Last-Translator: Lena Vangeli <l.vangeli@ixiam.com>\n"
 "Language-Team: Greek (http://www.transifex.com/civicrm/civicrm/language/el/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -50,7 +51,7 @@ msgstr "Συνεντευξιαζόμενος"
 
 #: CRM/Campaign/BAO/Query.php
 msgid "Could not find survey for %1 respondents."
-msgstr ""
+msgstr "Δεν ήταν δυνατή η εύρεση Έρευνας για %1 ανταποκρινόμενους."
 
 #: CRM/Campaign/BAO/Query.php
 msgid "Campaigns %1"
@@ -59,11 +60,11 @@ msgstr "Εκστρατείες %1"
 #: CRM/Campaign/BAO/Survey.php CRM/Campaign/Form/Task/Reserve.php
 #: CRM/Campaign/Page/Vote.php CRM/Campaign/Task.php
 msgid "Reserve Respondents"
-msgstr ""
+msgstr "Ανταποκρινόμενοι."
 
 #: CRM/Campaign/BAO/Survey.php CRM/Campaign/Page/Vote.php
 msgid "Interview Respondents"
-msgstr ""
+msgstr "Συνέντευξη των αντοποκρινόμενων."
 
 #: CRM/Campaign/BAO/Survey.php CRM/Campaign/Form/Task/Release.php
 #: CRM/Campaign/Task.php templates/CRM/Campaign/Form/Task/Release.tpl
@@ -72,7 +73,7 @@ msgstr ""
 
 #: CRM/Campaign/BAO/Survey.php
 msgid "View Survey Report"
-msgstr ""
+msgstr "Προβολή των αποτελεσμάτων της έρευνας."
 
 #: CRM/Campaign/DAO/Campaign.php
 msgid "Campaign Description"
@@ -92,11 +93,11 @@ msgstr "Κωδικός ID Εκστρατείας"
 
 #: CRM/Campaign/DAO/Campaign.php
 msgid "Campaign Status ID"
-msgstr ""
+msgstr "Κωδικός καμπάνιας."
 
 #: CRM/Campaign/DAO/Campaign.php
 msgid "Campaign External Identifier"
-msgstr ""
+msgstr "Εξωτερικά χαρακτηριστικά καμπάνιας."
 
 #: CRM/Campaign/DAO/Campaign.php
 msgid "Parent Campaign"
@@ -104,11 +105,11 @@ msgstr "Γονική Εκστρατεία"
 
 #: CRM/Campaign/DAO/Campaign.php
 msgid "Is Campaign Active?"
-msgstr ""
+msgstr "Είναι η καμπάνια ενεργή;"
 
 #: CRM/Campaign/DAO/Campaign.php
 msgid "Campaign Created By"
-msgstr ""
+msgstr "Η καμπάνια δημιουργήθηκε από"
 
 #: CRM/Campaign/DAO/Campaign.php CRM/Campaign/DAO/Survey.php
 msgid "Campaign Created Date"
@@ -116,11 +117,11 @@ msgstr "Ημερομηνία δημιουργίας εκστρατείας"
 
 #: CRM/Campaign/DAO/Campaign.php
 msgid "Campaign Modified By"
-msgstr ""
+msgstr "Η καμπάνια τροποποιήθηκε από τον/την"
 
 #: CRM/Campaign/DAO/Campaign.php
 msgid "Campaign Modified Date"
-msgstr ""
+msgstr "Ημερομηνία τροποποίησης καμπάνιας."
 
 #: CRM/Campaign/DAO/Campaign.php CRM/Campaign/Form/Campaign.php
 msgid "Campaign Goals"
@@ -144,7 +145,7 @@ msgstr "Οδηγίες"
 #: templates/CRM/Campaign/Page/Petition.tpl
 #: templates/CRM/Campaign/Page/Survey.tpl
 msgid "Release Frequency"
-msgstr ""
+msgstr "Συχνότητα"
 
 #: CRM/Campaign/DAO/Survey.php
 msgid "Maximum number of contacts"
@@ -172,7 +173,7 @@ msgstr "Γονικό ID"
 
 #: CRM/Campaign/Form/Campaign.php
 msgid "- select Parent -"
-msgstr ""
+msgstr "-επιλέξτε γονέα-"
 
 #: CRM/Campaign/Form/Campaign.php
 msgid "Revenue Goal"
@@ -204,7 +205,7 @@ msgstr "GOTV (Παρακολούθηση όσων ψηφίζουν)"
 msgid ""
 "Oops. It looks like no surveys have been created. <a href='%1'>Click here to"
 " create a new survey.</a>"
-msgstr ""
+msgstr "Ωπ! Δεν δημιουργήθηκαν καινούριες έρευνες.  <a href='%1'>Πατήστε εδώ για να δημιουργήσετε καινούρια έρευνα.</a>"
 
 #: CRM/Campaign/Form/Gotv.php CRM/Campaign/Form/Task/Interview.php
 msgid "Could not find Survey."
@@ -233,7 +234,7 @@ msgstr "Διαγραφή έκκλησης"
 
 #: CRM/Campaign/Form/Petition.php
 msgid "Petition Dashboard"
-msgstr ""
+msgstr "Ταμπλό αναφοράς."
 
 #: CRM/Campaign/Form/Petition.php
 msgid "Petition Title"
@@ -245,7 +246,7 @@ msgstr "Προφίλ Επαφής"
 
 #: CRM/Campaign/Form/Petition.php
 msgid "Activity Profile"
-msgstr ""
+msgstr "Δραστηριότητα του προφίλ."
 
 #: CRM/Campaign/Form/Petition.php
 msgid "Bypass email confirmation"
@@ -259,25 +260,25 @@ msgstr "Είναι Προεπιλογή;"
 msgid ""
 "This title is already associated with the selected activity type. Please "
 "specify a unique title."
-msgstr ""
+msgstr "Ο τίτλος είναι ήδη συνδεδεμένος με τον επιλεγμένο τύπο δραστηριότητας. Παρακαλώ προσδιορίστε έναν μοναδικό τίτλο."
 
 #: CRM/Campaign/Form/Petition.php
 msgid ""
 "This title is already associated with the selected campaign and activity "
 "type. Please specify a unique title."
-msgstr ""
+msgstr "Ο τίτλος είναι ήδη συνδεδεμένος με την επιλεγμένη καμπάνια και τον επιλεγμένο τύπο δραστηριότητας. Παρακαλώ προσδιορίστε έναν μοναδικό τίτλο."
 
 #: CRM/Campaign/Form/Petition.php
 msgid " Petition has been deleted."
-msgstr ""
+msgstr "Η αναφορά διαγράφηκε."
 
 #: CRM/Campaign/Form/Petition.php
 msgid "Petition has been saved."
-msgstr ""
+msgstr "Η αναφορά σώθηκε."
 
 #: CRM/Campaign/Form/Petition.php
 msgid " You can add another Petition."
-msgstr ""
+msgstr "Μπορείτε να προσθέσετε μια άλλη αναφορά."
 
 #: CRM/Campaign/Form/Search/Campaign.php
 msgid "Find Campaigns"
@@ -285,7 +286,7 @@ msgstr "Εύρεση Καμπάνιας"
 
 #: CRM/Campaign/Form/Search/Petition.php
 msgid "Find Petition"
-msgstr ""
+msgstr "Βρες αναφορά."
 
 #: CRM/Campaign/Form/Search/Survey.php
 msgid "Find Survey"
@@ -293,7 +294,7 @@ msgstr "Εύρεση Έρευνας"
 
 #: CRM/Campaign/Form/Search.php
 msgid "Find Respondents To %1"
-msgstr ""
+msgstr "Βρες ανταποκρινόμενους στο %1"
 
 #: CRM/Campaign/Form/Search.php CRM/Campaign/Form/Task/Interview.php
 msgid "Record %1 Responses"
@@ -301,15 +302,15 @@ msgstr "Καταγραφή % απαντήσεων"
 
 #: CRM/Campaign/Form/Search.php
 msgid "Find Respondents"
-msgstr ""
+msgstr "Βρες ανταποκρινόμενους."
 
 #: CRM/Campaign/Form/Survey/Delete.php
 msgid "'%1' survey has been deleted."
-msgstr ""
+msgstr "%1 της έρευνας έχει διαγραφεί."
 
 #: CRM/Campaign/Form/Survey/Delete.php
 msgid "Delete action is missing expected survey ID."
-msgstr ""
+msgstr "Διαγραφή ενέργειας, λείπει ο κωδικός της έρευνας."
 
 #: CRM/Campaign/Form/Survey/Main.php
 msgid "Configure Survey"
@@ -325,19 +326,19 @@ msgstr "Οδηγίες για όσους παίρνουν συνέντευξη"
 
 #: CRM/Campaign/Form/Survey/Main.php
 msgid "Release frequency"
-msgstr ""
+msgstr "Συχνότητα."
 
 #: CRM/Campaign/Form/Survey/Main.php
 msgid "Release Frequency interval should be a positive number."
-msgstr ""
+msgstr "Η συχνότητα πρέπει να είναι θετικός αριθμός."
 
 #: CRM/Campaign/Form/Survey/Main.php
 msgid "Maximum reserved at one time"
-msgstr ""
+msgstr "Μέγιστος αριθμός εξυπηρετούμενων σε μία φορά."
 
 #: CRM/Campaign/Form/Survey/Main.php
 msgid "Maximum reserved at one time should be a positive number"
-msgstr ""
+msgstr "Ο μέγιστος αριθμός εξυπηρετούμενων σε μία φορά πρέπει να είναι θετικός. "
 
 #: CRM/Campaign/Form/Survey/Main.php
 msgid "Total reserved per interviewer"
@@ -384,11 +385,11 @@ msgstr "Εισάγετε τουλάχιστον μία επιλογή αποτε
 
 #: CRM/Campaign/Form/Survey/Results.php
 msgid "Please select a Survey Result Set."
-msgstr ""
+msgstr "Παρακαλώ επιλέξτε ένα σετ αποτελεσμάτων της έρευνας."
 
 #: CRM/Campaign/Form/Survey/Results.php
 msgid "A Survey Detail Report <a href='%1'>%2</a> has been created."
-msgstr ""
+msgstr "Μια λεπτομερή έρευνα <a href='%1'>%2</a έχει δημιουργηθεί."
 
 #: CRM/Campaign/Form/Survey/TabHeader.php
 msgid "Main Information"
@@ -396,7 +397,7 @@ msgstr "Κύριες πληροφορίες"
 
 #: CRM/Campaign/Form/Survey/TabHeader.php
 msgid "Results"
-msgstr ""
+msgstr "Αποτελέσματα."
 
 #: CRM/Campaign/Form/Survey.php
 msgid "Configure Survey - %1"
@@ -408,11 +409,11 @@ msgstr "'%1' έχει σωθεί."
 
 #: CRM/Campaign/Form/SurveyType.php
 msgid "Selected Survey type has been deleted."
-msgstr ""
+msgstr "Ο επιλεγμένος τύπος έρευνας έχει διαγραφεί."
 
 #: CRM/Campaign/Form/SurveyType.php
 msgid "The Survey type '%1' has been saved."
-msgstr ""
+msgstr "%1 του τύπου έρευνας έχει αποθηκευτεί."
 
 #: CRM/Campaign/Form/Task/Interview.php
 msgid "Could not find Interviewer."
@@ -440,7 +441,7 @@ msgstr ""
 
 #: CRM/Campaign/Form/Task/Interview.php
 msgid "Respondent Interview"
-msgstr ""
+msgstr "Συνέντευξη ανταποκρινόμενων."
 
 #: CRM/Campaign/Form/Task/Print.php CRM/Campaign/Task.php
 msgid "Print Respondents"
@@ -448,7 +449,7 @@ msgstr "Εκτύπωση όσων απάντησαν"
 
 #: CRM/Campaign/Form/Task/Release.php
 msgid "Please search with 'Survey', to apply this action."
-msgstr ""
+msgstr "Παρακαλούμε να αναζητήσετε με την «Έρευνα», για την εφαρμογή αυτής της δράσης."
 
 #: CRM/Campaign/Form/Task/Release.php CRM/Campaign/Form/Task/Reserve.php
 msgid "Missing Interviewer contact."
@@ -456,19 +457,19 @@ msgstr ""
 
 #: CRM/Campaign/Form/Task/Release.php
 msgid "Could not find respondents to release."
-msgstr ""
+msgstr "Δεν βρέθηκαν ανταποκρινόμενοι."
 
 #: CRM/Campaign/Form/Task/Release.php
 msgid "We could not found respondent for this survey to release."
-msgstr ""
+msgstr "Δεν βρέθηκαν ανταποκρινόμενοι γι' αυτή την έρευνα."
 
 #: CRM/Campaign/Form/Task/Release.php
 msgid "%1 respondent(s) have been released."
-msgstr ""
+msgstr "%1 ανταποκρινόμενοι έχει ολοκληρωθεί."
 
 #: CRM/Campaign/Form/Task/Release.php
 msgid "%1 respondents did not release."
-msgstr ""
+msgstr "%1 ανταποκρινόμενοι δεν έχει ολοκληρωθεί."
 
 #: CRM/Campaign/Form/Task/Reserve.php
 msgid "Could not find Survey Id."
@@ -490,7 +491,7 @@ msgstr ""
 #: CRM/Campaign/Form/Task/Reserve.php
 #: templates/CRM/Campaign/Form/Task/Reserve.tpl
 msgid "Add respondent(s) to existing group(s)"
-msgstr ""
+msgstr "Προσθέστε ανταποκρινόμενους στις ήδη υπάρχουσες ομάδες."
 
 #: CRM/Campaign/Form/Task/Reserve.php
 #: templates/CRM/Campaign/Form/Task/Interview.tpl
@@ -511,7 +512,7 @@ msgstr ""
 
 #: CRM/Campaign/Form/Task/Reserve.php
 msgid "Respondent(s) has been added to %1 group(s)."
-msgstr ""
+msgstr "Ανταποκρινόμενος/νοι έχουν προσθεθεί στο %1 της ομάδας/ων"
 
 #: CRM/Campaign/Form/Task/Reserve.php
 msgid "Reservation Added"
@@ -576,7 +577,7 @@ msgstr "Υπογράψτε"
 
 #: CRM/Campaign/Page/DashBoard.php
 msgid "Sign Petition"
-msgstr ""
+msgstr "Υπογραφή αναφοράς."
 
 #: CRM/Campaign/Page/DashBoard.php
 msgid "Signatures"
@@ -589,7 +590,7 @@ msgstr "Λίστα υπογραφών"
 #: CRM/Campaign/Page/DashBoard.php
 #: templates/CRM/Campaign/Form/Search/Campaign.tpl
 msgid "Search Campaigns"
-msgstr ""
+msgstr "Ψάξτε καμπάνιες."
 
 #: CRM/Campaign/Page/DashBoard.php
 msgid "Search Survey"
@@ -601,7 +602,7 @@ msgstr "προβολή οτυ σετ αποτελεσμάτων"
 
 #: CRM/Campaign/Page/DashBoard.php
 msgid "Incomplete. Click to configure result set."
-msgstr ""
+msgstr "Δεν ολοκληρώθηκε. Κάντε κλικ για να ρυθμίσετε το σύνολο των αποτελεσμάτων."
 
 #: CRM/Campaign/Page/DashBoard.php
 msgid "Search Petition"
@@ -609,11 +610,11 @@ msgstr "Αναζήτηση Αιτήματος"
 
 #: CRM/Campaign/Page/DashBoard.php
 msgid "Surveys"
-msgstr ""
+msgstr "Έρευνες"
 
 #: CRM/Campaign/Page/DashBoard.php
 msgid "Petitions"
-msgstr ""
+msgstr "Αναφορές."
 
 #: CRM/Campaign/Selector/Search.php
 msgid "Respondents"
