--- a/po/el_GR/member.po
+++ b/po/el_GR/member.po
@@ -6,14 +6,15 @@
 # kvisitor <kvisitor@gnugr.org>, 2012
 # kvisitor <kvisitor@gnugr.org>, 2013-2014
 # kvisitor <kvisitor@gnugr.org>, 2012-2013
+# Lena Vangeli <l.vangeli@ixiam.com>, 2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # Vangelis P. <v.pantazis@ixiam.com>, 2014-2015
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-04-06 11:09+0000\n"
+"Last-Translator: Lena Vangeli <l.vangeli@ixiam.com>\n"
 "Language-Team: Greek (http://www.transifex.com/civicrm/civicrm/language/el/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -694,7 +695,7 @@ msgstr "Παρακαλώ εισάγετε το όνομα ενός τύπου σ
 
 #: CRM/Member/Form/MembershipType.php
 msgid "Please select valid organization contact."
-msgstr ""
+msgstr "Παρακαλώ επιλέξτε μια έγκυρη επαφή."
 
 #: CRM/Member/Form/MembershipType.php
 msgid "Please enter a financial type."
@@ -772,11 +773,11 @@ msgstr "Η Συνδρομή Μέλους Διαγράφηκε"
 
 #: CRM/Member/Form/MembershipView.php
 msgid "Manual Assignment of Related Membership"
-msgstr ""
+msgstr "Χειροκίνητη ανάθεση μιας σχετιζόμενης συνδρομής."
 
 #: CRM/Member/Form/MembershipView.php
 msgid "Related membership for %1 has been created."
-msgstr ""
+msgstr "Συσχετιζόμενη συνδρομή για %1 έχει δημιουργηθεί."
 
 #: CRM/Member/Form/MembershipView.php
 msgid "Membership Added"
@@ -784,7 +785,7 @@ msgstr "Η Συνδρομή Μέλους Προστέθηκε"
 
 #: CRM/Member/Form/MembershipView.php
 msgid "Invalid action specified in URL"
-msgstr ""
+msgstr "Άκυρη ενέργεια στο URL."
 
 #: CRM/Member/Form/MembershipView.php
 msgid "Unlimited"
