po: update po/ca_ES/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ca_ES/admin.po
+++ b/po/ca_ES/admin.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-03-30 15:20+0000\n"
+"PO-Revision-Date: 2016-04-06 11:37+0000\n"
 "Last-Translator: Andreu Lligadas <a.lligadas@gmail.com>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -136,15 +136,15 @@ msgstr "Entitat de trucada de l'API"
 
 #: CRM/Admin/Form/Job.php
 msgid "API Call Action"
-msgstr ""
+msgstr "Crida acció API"
 
 #: CRM/Admin/Form/Job.php
 msgid "Run frequency"
-msgstr ""
+msgstr "Freqüència d'execució"
 
 #: CRM/Admin/Form/Job.php
 msgid "Command parameters"
-msgstr ""
+msgstr "Paràmetres d'ordre"
 
 #: CRM/Admin/Form/Job.php
 msgid "Is this Scheduled Job active?"
@@ -152,7 +152,7 @@ msgstr "Està activa aquesta tasca programada?"
 
 #: CRM/Admin/Form/Job.php
 msgid "Given API command is not defined."
-msgstr ""
+msgstr "L'ordre d'API rebuda no ha sigut definida"
 
 #: CRM/Admin/Form/Job.php
 msgid "Scheduled Job Deleted."
@@ -170,7 +170,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Job.php
 msgid "Warning: Update Greeting job enabled"
-msgstr ""
+msgstr "Atenció: Actualització tasca de benvinguda habilitada"
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Is this Label Format the default?"
@@ -210,19 +210,19 @@ msgstr "Espaiat vertical "
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Left Padding"
-msgstr ""
+msgstr "Separació esquerra"
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Top Padding"
-msgstr ""
+msgstr "Separació superior"
 
 #: CRM/Admin/Form/LabelFormats.php CRM/Admin/Form/Setting/Mail.php
 msgid "Must be an integer"
-msgstr ""
+msgstr "Ha de ser nombre enter"
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Must be numeric"
-msgstr ""
+msgstr "Ha de ser numèric"
 
 #: CRM/Admin/Form/LabelFormats.php CRM/Admin/Form/PdfFormats.php
 msgid "Weight must be integer"
@@ -230,19 +230,19 @@ msgstr "El pes ha de ser un enter"
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Selected Label Format has been deleted."
-msgstr ""
+msgstr "El format de l'Etiqueta seleccionada ha sigut eliminat."
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "of "
-msgstr ""
+msgstr "de"
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Your new Label Format titled <strong>%1</strong> has been saved."
-msgstr ""
+msgstr "El format de l'Etiqueta anomenada <strong>%1</strong> s'ha desat."
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Your Label Format titled <strong>%1</strong> has been updated."
-msgstr ""
+msgstr "El format de l'Etiqueta anomenada <strong>%1</strong> s'ha actualitzat."
 
 #: CRM/Admin/Form/LocationType.php
 msgid "Name can only consist of alpha-numeric characters"
@@ -296,11 +296,11 @@ msgstr "Utilitzada per a?"
 #: CRM/Admin/Form/MailSettings.php
 msgid ""
 "Please enter a valid domain for this mailbox account (the part after @)."
-msgstr ""
+msgstr "Si us plau introduïu un domini vàlid per a la bústia. (la part després de @)"
 
 #: CRM/Admin/Form/MailSettings.php
 msgid "Mail Setting Deleted."
-msgstr ""
+msgstr "Paràmetre de correu eliminat."
 
 #: CRM/Admin/Form/MailSettings.php
 msgid "Your New  Email Settings have been saved."
@@ -312,7 +312,7 @@ msgstr "S'ha actualitzat la vostra configuració de correu electrònic."
 
 #: CRM/Admin/Form/MailSettings.php
 msgid "Changes Not Saved."
-msgstr ""
+msgstr "Els canvis no s'han desat."
 
 #: CRM/Admin/Form/MessageTemplates.php
 #: templates/CRM/Admin/Page/MessageTemplates.hlp
@@ -347,7 +347,7 @@ msgstr "Menú '%1' ha estat desat."
 
 #: CRM/Admin/Form/OptionGroup.php
 msgid "Dropdown Options"
-msgstr ""
+msgstr "Opcions desplegable"
 
 #: CRM/Admin/Form/OptionGroup.php
 msgid "Selected option group has been deleted."
@@ -363,11 +363,11 @@ msgstr "Opció per defecte?"
 
 #: CRM/Admin/Form/OptionValue.php
 msgid "Is OptGroup?"
-msgstr ""
+msgstr "És OptGroup?"
 
 #: CRM/Admin/Form/OptionValue.php CRM/Admin/Form/Options.php
 msgid "Multiple Contact Merge"
-msgstr ""
+msgstr "Convinació multiple de Contactes"
 
 #: CRM/Admin/Form/OptionValue.php
 msgid "Value already exist in database."
@@ -381,7 +381,7 @@ msgstr "El valor d'opció '%1' ha estat desat."
 msgid ""
 "Learn more about a script that can automatically update contact addressee "
 "and greeting options."
-msgstr ""
+msgstr "Més infirmació sobre l'script que pot automàticament actualitzar l'adreça de contacte i les opcions de benvinguda."
 
 #: CRM/Admin/Form/Options.php
 msgid ""
@@ -495,11 +495,11 @@ msgstr "Haureu de, almenys especificar el nom_usuari"
 
 #: CRM/Admin/Form/PaymentProcessor.php
 msgid "Payment Processor Deleted."
-msgstr ""
+msgstr "Processador de pagament esborrat."
 
 #: CRM/Admin/Form/PaymentProcessor.php
 msgid "Payment processor %1 has been saved."
-msgstr ""
+msgstr "Processador de pagament %1 s'ha desat."
 
 #: CRM/Admin/Form/PaymentProcessorType.php
 msgid "Enter a positive integer"
@@ -571,11 +571,11 @@ msgstr "Té aquest sistema de pagament un tipus de suport per a donacions perman
 
 #: CRM/Admin/Form/PdfFormats.php
 msgid "Is this PDF Page Format the default?"
-msgstr ""
+msgstr "Aquesta és la pàgina PDF per defecte?"
 
 #: CRM/Admin/Form/PdfFormats.php
 msgid "Margin must be numeric"
-msgstr ""
+msgstr "El màrge ha de ser numèric"
 
 #: CRM/Admin/Form/PdfFormats.php
 msgid "Selected PDF Page Format has been deleted."
