--- a/po/nl_NL/event.po
+++ b/po/nl_NL/event.po
@@ -17,8 +17,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-18 14:58+0000\n"
-"Last-Translator: mollux <mattias.michaux@gmail.com>\n"
+"PO-Revision-Date: 2016-04-07 13:29+0000\n"
+"Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -817,7 +817,7 @@ msgstr "Aanmelding voor"
 
 #: CRM/Event/Form/Participant.php
 msgid "CiviEvent Dashboard"
-msgstr "CiviEvent dashboard"
+msgstr "CiviEvent-dashboard"
 
 #: CRM/Event/Form/Participant.php
 msgid ""
