po: update po/nl_NL/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/common-base.po
+++ b/po/nl_NL/common-base.po
@@ -22,8 +22,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-03-31 16:27+0000\n"
-"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
+"PO-Revision-Date: 2016-04-07 13:31+0000\n"
+"Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -26193,7 +26193,7 @@ msgstr "Hoofdbeheer toegang tot CiviCRM backend en API"
 
 #: CRM/Core/Permission.php
 msgid "View Contact Dashboard (for themselves and visible contacts)"
-msgstr "Bekijken Contact Dashboard (voor zichhzelf en zichtbare contacten)"
+msgstr "Bekijken Contact-dashboard (voor zichzelf en zichtbare contacten)"
 
 #: CRM/Core/Permission.php
 msgid "Allow User to enable multilingual"
