--- a/po/nl_NL/case.po
+++ b/po/nl_NL/case.po
@@ -7,7 +7,7 @@
 # brouwser <brouwer@ee-atwork.nl>, 2013
 # brouwser <brouwer@ee-atwork.nl>, 2012
 # brouwser <brouwer@ee-atwork.nl>, 2012-2013
-# HanV <han.velthuis@home.nl>, 2013-2015
+# HanV <han.velthuis@home.nl>, 2013-2016
 # HanV <han.velthuis@home.nl>, 2012
 # HanV <han.velthuis@home.nl>, 2011-2012
 # Jeroen Groothuismink <jeroengroothuismink@gmail.com>, 2012
@@ -17,8 +17,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-15 15:54+0000\n"
-"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
+"PO-Revision-Date: 2016-04-07 13:28+0000\n"
+"Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -434,7 +434,7 @@ msgstr "Kan geen geldig dossier vinden!"
 
 #: CRM/Case/Page/DashBoard.php
 msgid "CiviCase Dashboard"
-msgstr "CiviCase dashboard"
+msgstr "CiviCase-dashboard"
 
 #: CRM/Case/Page/DashBoard.php
 msgid "You are not authorized to access all cases and activities."
