--- a/po/fr_FR/common-base.po
+++ b/po/fr_FR/common-base.po
@@ -15,6 +15,7 @@
 # Christophe BENZ <christophe.benz@gmail.com>, 2011-2012
 # LittleMissGeek <inactive+LittleMissGeek@transifex.com>, 2011
 # Daniel Cruson <crusonweb@gmail.com>, 2014
+# david kronfeld <david@kronfeld.be>, 2016
 # ERELOSInfo <erelosinfo@gmail.com>, 2014
 # ERELOSInfo <erelosinfo@gmail.com>, 2014
 # F Boot <f2boot@gmail.com>, 2012
@@ -41,8 +42,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-03-08 15:15+0000\n"
-"Last-Translator: Philippe SAMPONT <PhilippeS@cncd.be>\n"
+"PO-Revision-Date: 2016-04-09 07:30+0000\n"
+"Last-Translator: david kronfeld <david@kronfeld.be>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -10188,7 +10189,7 @@ msgstr "Veuillez entrer un nombre de participants valide."
 
 #: CRM/Price/Form/Field.php CRM/Price/Form/Option.php
 msgid "Number of terms"
-msgstr "Nombre de termes"
+msgstr "Nombre de périodes"
 
 #: CRM/Price/Form/Field.php
 msgid "Display Amount?"
@@ -17233,7 +17234,7 @@ msgstr "Si un type d'adhésion est sélectionné, une adhésion sera créée ou 
 msgid ""
 "You can set this to a number other than one to allow multiple membership "
 "terms."
-msgstr "Vous pouvez indiquer ici un nombre différent de un pour permettre plusieurs types d'adhésions."
+msgstr "Vous pouvez indiquer ici un nombre différent de un pour permettre plusieurs périodes d'adhésions."
 
 #: templates/CRM/Price/Form/Option.tpl
 msgid ""
@@ -17270,7 +17271,7 @@ msgstr "Entrez jusqu'à quinze options pour ce champ à choix multiple (cliquez 
 
 #: templates/CRM/Price/Form/OptionFields.tpl
 msgid "Number of Terms"
-msgstr "Nombre de types"
+msgstr "Nombre de périodes"
 
 #: templates/CRM/Price/Form/OptionFields.tpl
 msgid "Max Participant"
