po: update po/pt_BR/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/pt_BR/common-base.po
+++ b/po/pt_BR/common-base.po
@@ -31,7 +31,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-03-13 14:51+0000\n"
+"PO-Revision-Date: 2016-04-09 14:07+0000\n"
 "Last-Translator: Diego Viegas <diego.viegas@dotpro.com.br>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/civicrm/civicrm/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
@@ -10866,7 +10866,7 @@ msgstr "Cancelar Redirecionamento de URL"
 
 #: CRM/UF/Form/AdvanceSetting.php js/model/crm.uf.js
 msgid "Limit listings to a specific Group?"
-msgstr "Limite de visualizações para um grupo específico?"
+msgstr "Limitar a busca a um grupo específico?"
 
 #: CRM/UF/Form/AdvanceSetting.php js/model/crm.uf.js
 msgid "Notify when profile form is submitted?"
